--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
         <p class="text-2xl text-gray-800">Down</p>
       </div>
     </div>
+    <button
+      class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
+      id="verify"
+    >
+      Verify
+    </button>
     <script type="module" src="public/js/crossword.js"></script>
     <script type="module" src="public/js/deepcopy.js"></script>
   </body>
