keayboard should toggle on android

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     >
       Verify
     </button>
+    <input type="text" name="" id="" class="hidden">
     <script type="module" src="public/js/crossword.js"></script>
     <script type="module" src="public/js/deepcopy.js"></script>
   </body>
