--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body class="p-4 bg-gray-100">
     <p class="text-green-600 text-4xl text-center p-2">Crosswords</p>
-    <div id="board" class="overflow-x-auto"></div>
+    <div id="board" class="overflow-x-auto w-screen"></div>
     <div id="clues" class="p-6">
       <div id="across">
         <p class="text-2xl text-gray-800">Across</p>
@@ -30,7 +30,7 @@
     >
       Verify
     </button>
-    <input type="text" name="" id="" class="hidden">
+    <input class="dummyInput" id="username" type="text" />
     <script type="module" src="public/js/crossword.js"></script>
     <script type="module" src="public/js/deepcopy.js"></script>
   </body>
