--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
   <body class="p-4 bg-gray-100">
     <p class="text-green-600 text-6xl text-center p-2">Crosswords</p>
     <div class="flex justify-center">
-      <div id="board" class=""></div>
+      <div
+        id="board"
+        class="overflow-x-auto border-8 border-green-600 w-screen p-2"
+      ></div>
     </div>
     <div id="clues" class="p-6">
       <div id="across">
